--- a/.github/workflows/android-arm64-static.yml
+++ b/.github/workflows/android-arm64-static.yml
@@ -13,14 +13,14 @@ jobs:
 
     - name: Build Android ARM64 static binary
       run: |
-        # 创建一个极简Dockerfile，专注于基本功能
+        # 创建Dockerfile - 基于您提供的BCC的Dockerfile
         cat > Dockerfile.android-arm64 << 'EOF'
         FROM ubuntu:22.04
 
         ENV DEBIAN_FRONTEND=noninteractive
         ENV TZ=Etc/UTC
 
-        # 安装基本依赖，确保包含wget
+        # 安装基本依赖
         RUN apt-get update && apt-get install -y \
             build-essential \
             cmake \
@@ -40,6 +40,8 @@ jobs:
             libiberty-dev \
             libzstd-dev \
             libncurses-dev \
+            autoconf \
+            libtool \
             binutils-aarch64-linux-gnu \
             gcc-aarch64-linux-gnu \
             g++-aarch64-linux-gnu
@@ -63,7 +65,7 @@ jobs:
         # 创建ARM64的库目录
         RUN mkdir -p /usr/aarch64-linux-gnu/lib /usr/aarch64-linux-gnu/include
 
-        # 从源码编译libbpf - 最新版本
+        # 从源码编译libbpf
         WORKDIR /src
         RUN git clone --recursive https://github.com/libbpf/libbpf.git && \
             cd libbpf/src && \
@@ -71,87 +73,36 @@ jobs:
             DESTDIR=/ make install prefix=/usr && \
             DESTDIR=/ make install_uapi_headers prefix=/usr
 
-        # 设置交叉编译环境 - 避免目录冲突
-        RUN cp -r /usr/include/bpf /usr/aarch64-linux-gnu/include/ && \
-            ln -sf /usr/lib64/libbpf.a /usr/aarch64-linux-gnu/lib/
-
-        # 创建终端库的软链接
-        RUN ln -sf /usr/lib/x86_64-linux-gnu/libncurses.a /usr/lib/libtinfo.a && \
-            ln -sf /usr/lib/x86_64-linux-gnu/libncurses.a /usr/aarch64-linux-gnu/lib/libtinfo.a
-
-        # 创建zstd库的软链接
-        RUN ln -sf /usr/lib/x86_64-linux-gnu/libzstd.a /usr/lib/libzstd.a && \
-            ln -sf /usr/lib/x86_64-linux-gnu/libzstd.a /usr/aarch64-linux-gnu/lib/libzstd.a
-
-        # 创建简单的BCC环境 - 避免软链接覆盖目录
+        # 编译BCC
         RUN git clone https://github.com/iovisor/bcc.git && \
-            mkdir -p /usr/include/bcc && \
-            mkdir -p /usr/include/bcc/compat && \
-            mkdir -p /usr/aarch64-linux-gnu/include/bcc && \
-            cp -r bcc/src/cc/api/* /usr/include/bcc/ 2>/dev/null || true && \
-            cp -r bcc/src/cc/libbpf/* /usr/include/bcc/ 2>/dev/null || true && \
-            cp -r bcc/src/cc/compat/* /usr/include/bcc/compat/ 2>/dev/null || true && \
-            cp -r /usr/include/bcc/* /usr/aarch64-linux-gnu/include/bcc/ 2>/dev/null || true && \
-            touch dummy.c && \
-            ar rcs /usr/lib/libbcc.a dummy.c && \
+            cd bcc && \
+            mkdir build && \
+            cd build && \
+            cmake -DCMAKE_INSTALL_PREFIX=/usr \
+                  -DENABLE_EXAMPLES=OFF \
+                  -DENABLE_MAN=OFF \
+                  -DENABLE_TESTS=OFF \
+                  .. && \
+            make -j$(nproc) && \
+            make install
+
+        # 设置交叉编译环境
+        RUN cp -r /usr/include/bpf /usr/aarch64-linux-gnu/include/ && \
+            ln -sf /usr/lib64/libbpf.a /usr/aarch64-linux-gnu/lib/ && \
             ln -sf /usr/lib/libbcc.a /usr/aarch64-linux-gnu/lib/ && \
-            ar rcs /usr/lib/libbcc_bpf.a dummy.c && \
-            ln -sf /usr/lib/libbcc_bpf.a /usr/aarch64-linux-gnu/lib/ && \
-            echo "void bcc_elf_foreach_sym(void) {}" > dummy_loader.c && \
-            gcc -c dummy_loader.c && \
-            ar rcs /usr/lib/libbcc_loader_static.a dummy_loader.o && \
-            ln -sf /usr/lib/libbcc_loader_static.a /usr/aarch64-linux-gnu/lib/
-        
-        # 复制必要的库文件到ARM64目录
-        RUN cp /usr/lib/x86_64-linux-gnu/libelf.a /usr/aarch64-linux-gnu/lib/ 2>/dev/null || true && \
-            cp /usr/lib/x86_64-linux-gnu/libelf.so /usr/aarch64-linux-gnu/lib/ 2>/dev/null || true && \
-            cp /usr/lib/x86_64-linux-gnu/libz.a /usr/aarch64-linux-gnu/lib/ 2>/dev/null || true && \
-            cp /usr/lib/x86_64-linux-gnu/libz.so /usr/aarch64-linux-gnu/lib/ 2>/dev/null || true && \
-            cp /usr/lib/x86_64-linux-gnu/liblzma.a /usr/aarch64-linux-gnu/lib/ 2>/dev/null || true && \
-            cp /usr/lib/x86_64-linux-gnu/liblzma.so /usr/aarch64-linux-gnu/lib/ 2>/dev/null || true && \
-            cp -r /usr/include/elf.h /usr/aarch64-linux-gnu/include/ 2>/dev/null || true && \
-            cp -r /usr/include/libelf.h /usr/aarch64-linux-gnu/include/ 2>/dev/null || true && \
-            cp -r /usr/include/gelf.h /usr/aarch64-linux-gnu/include/ 2>/dev/null || true && \
-            cp -r /usr/include/nlist.h /usr/aarch64-linux-gnu/include/ 2>/dev/null || true
+            ln -sf /usr/lib/libbcc_bpf.a /usr/aarch64-linux-gnu/lib/ || true
+
+        # 创建所需的符号链接
+        RUN ln -sf /usr/lib/x86_64-linux-gnu/libncurses.a /usr/lib/libtinfo.a && \
+            ln -sf /usr/lib/x86_64-linux-gnu/libncurses.a /usr/aarch64-linux-gnu/lib/libtinfo.a && \
+            ln -sf /usr/lib/x86_64-linux-gnu/libzstd.a /usr/lib/libzstd.a && \
+            ln -sf /usr/lib/x86_64-linux-gnu/libzstd.a /usr/aarch64-linux-gnu/lib/libzstd.a
 
         WORKDIR /bpftrace
         EOF
 
         # 构建Docker镜像
         docker build -t bpftrace-android-arm64 -f Dockerfile.android-arm64 .
-
-        # 创建修改版的src/CMakeLists.txt
-        cat > src_cmakelists.patch << 'EOF'
-        --- src/CMakeLists.txt.orig	2023-01-01 00:00:00.000000000 +0000
-        +++ src/CMakeLists.txt	2023-01-01 00:00:00.000000000 +0000
-        @@ -44,7 +44,7 @@
-         add_library(libbpftrace STATIC ${SOURCES})
-         target_include_directories(libbpftrace PUBLIC ${CMAKE_SOURCE_DIR}/src)
-         target_include_directories(libbpftrace PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
-        -target_link_libraries(libbpftrace ast parser resources arch)
-        +target_link_libraries(libbpftrace ast parser resources arch z lzma ncurses)
-         
-         add_dependencies(libbpftrace parser)
-         set_target_properties(libbpftrace PROPERTIES OUTPUT_NAME bpftrace)
-        @@ -53,7 +53,7 @@
-         add_executable(bpftrace main.cpp)
-         if(STATIC_LINKING)
-           if(STATIC_LIBC)
-        -    target_link_options(bpftrace PRIVATE "-static")
-        +    target_link_options(bpftrace PRIVATE "-static -Wl,--allow-multiple-definition")
-           else()
-             # Using -static-libgcc -static-libstdc++ instead of -static
-             # to avoid the huge size increase from statically linking
-        @@ -64,7 +64,7 @@
-             endif()
-           endif()
-         endif()
-        -target_link_libraries(bpftrace libbpftrace)
-        +target_link_libraries(bpftrace libbpftrace z lzma ncurses)
-         
-         if (BUILD_FUZZ)
-           add_executable(bpftrace_fuzz fuzz_main.cpp)
-        EOF
 
         # 创建构建脚本
         cat > build-android-arm64.sh << 'EOF'
@@ -162,22 +113,37 @@ jobs:
         echo "===== 环境信息 ====="
         echo "LLVM版本:"
         llvm-config --version
-        echo "libbpf库版本:"
+        echo "BCC库:"
+        ls -la /usr/lib/libbcc* || echo "找不到BCC库"
+        echo "libbpf库:"
         ls -la /usr/lib64/libbpf* || echo "找不到libbpf库"
-        echo "BCC包含目录:"
-        ls -la /usr/include/bcc/ || echo "找不到BCC包含目录"
-        echo "LibElf库:"
-        ls -la /usr/lib/x86_64-linux-gnu/libelf* || echo "找不到LibElf库"
-        ls -la /usr/aarch64-linux-gnu/lib/libelf* || echo "找不到ARM64 LibElf库"
-        echo "Zlib库:"
-        ls -la /usr/lib/x86_64-linux-gnu/libz* || echo "找不到Zlib库"
-        ls -la /usr/aarch64-linux-gnu/lib/libz* || echo "找不到ARM64 Zlib库"
-        echo "Zstd库:"
-        ls -la /usr/lib/x86_64-linux-gnu/libzstd* || echo "找不到Zstd库"
-        ls -la /usr/lib/libzstd* || echo "找不到Zstd软链接"
-        echo "Terminfo库:"
-        ls -la /usr/lib/x86_64-linux-gnu/libncurses* || echo "找不到Terminfo库"
-        ls -la /usr/lib/libtinfo* || echo "找不到Terminfo软链接"
+
+        # 创建备份
+        cp -f CMakeLists.txt CMakeLists.txt.orig
+        cp -f src/CMakeLists.txt src/CMakeLists.txt.orig
+        cp -f src/ast/CMakeLists.txt src/ast/CMakeLists.txt.orig
+
+        # 直接修改源代码文件以解决依赖问题
+        # 1. 修改主CMakeLists.txt以跳过版本检查
+        sed -i 's/if(LLVM_VERSION VERSION_LESS "16" OR LLVM_VERSION VERSION_GREATER "20")/if(FALSE)/g' CMakeLists.txt
+        sed -i 's/if(NOT LIBBPF_FOUND)/if(FALSE)/g' CMakeLists.txt
+        sed -i 's/message(FATAL_ERROR "bpftrace requires libbpf 1.5 or greater")/message(STATUS "Skipping libbpf version check")/g' CMakeLists.txt
+
+        # 2. 直接删除zstd依赖
+        sed -i '/find_package(zstd)/d' CMakeLists.txt
+
+        # 3. 修改src/CMakeLists.txt中的链接设置
+        sed -i 's/target_link_libraries(libbpftrace ast parser resources arch)/target_link_libraries(libbpftrace ast parser resources arch z lzma zstd ncurses)/g' src/CMakeLists.txt
+        sed -i 's/target_link_libraries(bpftrace libbpftrace)/target_link_libraries(bpftrace libbpftrace z lzma zstd ncurses)/g' src/CMakeLists.txt
+        
+        # 4. 修改src/ast/CMakeLists.txt中的链接设置
+        sed -i 's/target_link_libraries(ast parser)/target_link_libraries(ast parser z lzma zstd ncurses)/g' src/ast/CMakeLists.txt
+        
+        # 5. 移除所有对zstd::libzstd_shared的引用
+        sed -i 's/zstd::libzstd_shared/zstd/g' src/CMakeLists.txt src/ast/CMakeLists.txt
+
+        # 6. 移除所有对Terminfo::terminfo的引用
+        sed -i 's/Terminfo::terminfo/ncurses/g' src/CMakeLists.txt src/ast/CMakeLists.txt
         
         # 创建交叉编译工具链文件
         cat > arm64_toolchain.cmake << 'CMAKEEOF'
@@ -193,7 +159,7 @@ jobs:
         set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE BOTH)
         set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE BOTH)
 
-        # 库文件 - 使用静态库
+        # 库文件
         set(ZLIB_LIBRARY /usr/lib/x86_64-linux-gnu/libz.a)
         set(ZLIB_INCLUDE_DIR /usr/include)
         
@@ -203,97 +169,15 @@ jobs:
         set(LIBLZMA_LIBRARIES /usr/lib/x86_64-linux-gnu/liblzma.a)
         set(LIBLZMA_INCLUDE_DIRS /usr/include)
         
-        set(zstd_LIBRARY /usr/lib/libzstd.a)
-        set(zstd_INCLUDE_DIR /usr/include)
-        
-        set(Terminfo_LIBRARIES /usr/lib/libtinfo.a)
-        set(Terminfo_INCLUDE_DIRS /usr/include)
-        
         # BCC设置
         set(LIBBCC_LIBRARIES /usr/lib/libbcc.a)
         set(LIBBCC_INCLUDE_DIRS /usr/include)
         set(LIBBCC_BPF_LIBRARIES /usr/lib/libbcc_bpf.a)
-        set(LIBBCC_LOADER_LIBRARY_STATIC /usr/lib/libbcc_loader_static.a)
 
         # LIBBPF设置
         set(LIBBPF_LIBRARIES /usr/lib64/libbpf.a)
         set(LIBBPF_INCLUDE_DIRS /usr/include)
         CMAKEEOF
-
-        # 备份原始CMakeLists.txt
-        cp -f CMakeLists.txt CMakeLists.txt.orig
-        
-        # 创建自定义的CMake模块目录
-        mkdir -p cmake_mod
-        
-        # 创建修改版本的FindLibElf.cmake
-        cat > cmake_mod/FindLibElf.cmake << 'ELFCMAKE'
-        # 直接设置LibElf变量，绕过检查
-        set(LIBELF_FOUND TRUE)
-        set(LIBELF_INCLUDE_DIRS "/usr/include")
-        set(LIBELF_LIBRARIES "/usr/lib/x86_64-linux-gnu/libelf.a")
-        ELFCMAKE
-
-        # 创建修改版本的FindLibLzma.cmake
-        cat > cmake_mod/FindLibLzma.cmake << 'LZMACMAKE'
-        # 直接设置LibLzma变量，绕过检查
-        set(LIBLZMA_FOUND TRUE)
-        set(LIBLZMA_INCLUDE_DIRS "/usr/include")
-        set(LIBLZMA_LIBRARIES "/usr/lib/x86_64-linux-gnu/liblzma.a")
-        LZMACMAKE
-
-        # 创建修改版本的FindLibZ.cmake
-        cat > cmake_mod/FindLibZ.cmake << 'ZCMAKE'
-        # 直接设置LibZ变量，绕过检查
-        set(LIBZ_FOUND TRUE)
-        set(LIBZ_INCLUDE_DIRS "/usr/include")
-        set(LIBZ_LIBRARIES "/usr/lib/x86_64-linux-gnu/libz.a")
-        ZCMAKE
-        
-        # 创建修改版本的Findztsd.cmake
-        cat > cmake_mod/Findzstd.cmake << 'ZSTDCMAKE'
-        # 直接设置zstd变量
-        set(zstd_FOUND TRUE)
-        set(zstd_INCLUDE_DIR "/usr/include")
-        set(zstd_LIBRARY "/usr/lib/libzstd.a")
-        add_library(zstd::libzstd_shared STATIC IMPORTED)
-        set_target_properties(zstd::libzstd_shared PROPERTIES
-          IMPORTED_LOCATION "/usr/lib/libzstd.a"
-          INTERFACE_INCLUDE_DIRECTORIES "/usr/include")
-        ZSTDCMAKE
-        
-        # 创建修改版本的FindTerminfo.cmake
-        cat > cmake_mod/FindTerminfo.cmake << 'TERMINFOCMAKE'
-        # 直接设置Terminfo变量
-        set(Terminfo_FOUND TRUE)
-        set(Terminfo_INCLUDE_DIRS "/usr/include")
-        set(Terminfo_LIBRARIES "/usr/lib/libtinfo.a")
-        set(Terminfo_LINKABLE TRUE)
-        add_library(Terminfo::terminfo STATIC IMPORTED)
-        set_target_properties(Terminfo::terminfo PROPERTIES
-          IMPORTED_LOCATION "/usr/lib/libtinfo.a"
-          INTERFACE_INCLUDE_DIRECTORIES "/usr/include")
-        TERMINFOCMAKE
-        
-        # 修改CMakeLists.txt跳过库检查
-        sed -i 's/if(LLVM_VERSION VERSION_LESS "16" OR LLVM_VERSION VERSION_GREATER "20")/if(FALSE)/g' CMakeLists.txt
-        sed -i 's/if(NOT LIBBPF_FOUND)/if(FALSE)/g' CMakeLists.txt
-        sed -i 's/message(FATAL_ERROR "bpftrace requires libbpf 1.5 or greater")/message(STATUS "Skipping libbpf version check")/g' CMakeLists.txt
-        
-        # 修改库检查的路径
-        sed -i 's|include(${CMAKE_SOURCE_DIR}/cmake/FindLibElf.cmake)|include(${CMAKE_SOURCE_DIR}/cmake_mod/FindLibElf.cmake)|g' CMakeLists.txt || true
-        sed -i 's|find_package(LibElf REQUIRED)|include(${CMAKE_SOURCE_DIR}/cmake_mod/FindLibElf.cmake)|g' CMakeLists.txt || true
-        sed -i 's|find_package(LibLzma)|include(${CMAKE_SOURCE_DIR}/cmake_mod/FindLibLzma.cmake)|g' CMakeLists.txt || true
-        sed -i 's|find_package(LibZ)|include(${CMAKE_SOURCE_DIR}/cmake_mod/FindLibZ.cmake)|g' CMakeLists.txt || true
-        sed -i 's|find_package(zstd)|include(${CMAKE_SOURCE_DIR}/cmake_mod/Findzstd.cmake)|g' CMakeLists.txt || true
-        sed -i 's|find_package(Terminfo)|include(${CMAKE_SOURCE_DIR}/cmake_mod/FindTerminfo.cmake)|g' CMakeLists.txt || true
-        
-        # 修改各种其他检查
-        sed -i 's|set(CMAKE_REQUIRED_LIBRARIES "${LIBELF_LIBRARIES}")|set(CMAKE_REQUIRED_LIBRARIES "${LIBELF_LIBRARIES}" "${LIBLZMA_LIBRARIES}" "${LIBZ_LIBRARIES}")|g' CMakeLists.txt || true
-        
-        # 备份和修补src/CMakeLists.txt
-        cp -f src/CMakeLists.txt src/CMakeLists.txt.orig
-        patch -p0 < src_cmakelists.patch || true
         
         # 创建构建目录
         mkdir -p build-android-arm64
@@ -305,40 +189,10 @@ jobs:
           -DCMAKE_BUILD_TYPE=Release \
           -DBUILD_TESTING=OFF \
           -DENABLE_MAN=OFF \
-          -DUSE_SYSTEM_BPF_BCC=OFF \
           -DENABLE_LIBDW=OFF \
-          -DENABLE_LIBBPF_SIDECG=OFF \
-          -DENABLE_SKP_DWARF=OFF \
           -DENABLE_LLVM_JIT=OFF \
-          -DLIBBPF_LIBRARIES=/usr/lib64/libbpf.a \
-          -DLIBBPF_INCLUDE_DIRS=/usr/include \
-          -DLIBBCC_LIBRARIES=/usr/lib/libbcc.a \
-          -DLIBBCC_INCLUDE_DIRS=/usr/include \
-          -DLIBBCC_BPF_LIBRARIES=/usr/lib/libbcc_bpf.a \
-          -DLIBBCC_LOADER_LIBRARY_STATIC=/usr/lib/libbcc_loader_static.a \
-          -DLIBELF_LIBRARIES=/usr/lib/x86_64-linux-gnu/libelf.a \
-          -DLIBELF_INCLUDE_DIRS=/usr/include \
-          -DLIBLZMA_LIBRARIES=/usr/lib/x86_64-linux-gnu/liblzma.a \
-          -DLIBLZMA_INCLUDE_DIRS=/usr/include \
-          -DLIBZ_LIBRARIES=/usr/lib/x86_64-linux-gnu/libz.a \
-          -DLIBZ_INCLUDE_DIRS=/usr/include \
-          -Dzstd_LIBRARY=/usr/lib/libzstd.a \
-          -Dzstd_INCLUDE_DIR=/usr/include \
-          -DTerminfo_LIBRARIES=/usr/lib/libtinfo.a \
-          -DTerminfo_INCLUDE_DIRS=/usr/include \
-          -DTerminfo_LINKABLE=TRUE \
-          -DHAVE_LIBBCC_PERF_READER_OPEN_PERF_EVENT=OFF \
-          -DHAVE_BCC_PROG_LOAD=ON \
-          -DHAVE_BCC_CREATE_MAP=ON \
-          -DHAVE_BCC_KFUNC=ON \
-          -DHAVE_BCC_USDT=ON \
-          -DHAVE_LIBBPF_1=ON \
-          -DHAVE_LIBBPF_MAP_BATCH=ON \
-          -DHAVE_LIBBPF_UPROBE_MULTI=ON \
-          -DBUILD_ASAN=OFF \
           -DBUILD_SHARED_LIBS=OFF \
-          -DSTATIC_LINKING=ON \
-          -DLLVM_REQUESTED_VERSION=16
+          -DSTATIC_LINKING=ON
           
         # 构建
         make -j$(nproc) VERBOSE=1 || true
