--- a/.github/workflows/android-arm64-static.yml
+++ b/.github/workflows/android-arm64-static.yml
@@ -20,7 +20,7 @@ jobs:
         ENV DEBIAN_FRONTEND=noninteractive
         ENV TZ=Etc/UTC
 
-        # 安装基本依赖 (添加了一些额外的依赖)
+        # 安装基本依赖
         RUN apt-get update && apt-get install -y \
             build-essential \
             cmake \
@@ -47,7 +47,7 @@ jobs:
             g++-aarch64-linux-gnu \
             libdwarf-dev \
             libdw-dev \
-            libopcodes-dev \
+            binutils-dev \
             libxml2-dev
 
         # 安装LLVM 16
